--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,10 +54,10 @@
       opacity: 1;
     }
     20% {
-      transform: scale(0.85) translateY(-50vh);
+      transform: translateY(-50vh) scale(0.45) ;
     }
     100% {
-      transform: scale(0.25) translateY(-100vh);
+      transform: translateY(-100vh) scale(0.25);
       opacity: 0;
     }
   }
@@ -66,11 +66,12 @@
     will-change: transform;      
     transform-origin: center center;
     z-index: 10; /* Ensure it's on top while animating */
+    
 
   }
   
   #cassette-wrapper.animate-slide-up {
-    animation: slideUpAndOut 4.5s cubic-bezier(0.65, 0, 0.35, 1) forwards;
+    animation: slideUpAndOut 6s cubic-bezier(0.65, 0, 0.35, 1) forwards;
   }
   #cassette-icon.accent-fill path {
     fill: var(--accent-color);
@@ -117,11 +118,12 @@
     overflow: visible; /* Just in case */
   }
   #enter-site-button svg {
-    height: 512px;
+    height: 360px;
     opacity: 0.35;
     width: auto;
     transition: opacity 0.5s ease;
     pointer-events: none;
+    padding:25px;
   }
   #enter-site-button svg path {
     fill: var(--secondary-color);
