--- a/stylesheet.css
+++ b/stylesheet.css
@@ -215,7 +215,7 @@
   
   .image-slide .custom-controls {
     opacity: 0;
-    pointer-events: none;
+    pointer-events: auto;
   }
   
  
@@ -227,6 +227,7 @@
   .image-slide:not(.center):not(.adjacent) {
     visibility:hidden !important;
     position: absolute;
+   
   }
   
   .custom-controls {
@@ -331,7 +332,7 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   }
-  .social-footer {
+  .page-footer {
     padding:25px;
     text-align: center;
     padding: 24px;
@@ -342,7 +343,6 @@
     -webkit-backdrop-filter: blur(4px);
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
     justify-content: center;
-    
   }
   .panel-head {
     position: relative;
@@ -356,15 +356,34 @@
     color: var(--accent-color);
     margin: 0;
     pointer-events: none;
-    opacity: 55%;
+    opacity: 75%;
     font-family: 'Righteous', monospace;
     font-style: italic;
     text-align: right;
+    -webkit-text-stroke-width: .25px;
+    -webkit-text-stroke-color: var(--secondary-color);
+
   }
-.footer-wrapper{
-  display:flex;
-  justify-content: center;
+  #flip-tape-button {
+    animation: flashytext 2s linear infinite;
+    opacity:1;
+    transition: opacity 1s ease;
+    padding:10px;
+    font-size:36px;
+    font-family: 'Righteous', sans-serif;
+    letter-spacing: 3px;
+    pointer-events: all;
+    cursor: pointer;
+    width: max-content;
+    margin:auto;
+  }
+
+ .hidden {
+ display:none;
+ }
+
+ .flip-container {
+  perspective: 1000px;
+  position: relative;
 }
-
-
 
