--- a/stylesheet.css
+++ b/stylesheet.css
@@ -311,10 +311,6 @@
   }
   
   .artist-name {
-    font-family: 'Righteous', sans-serif;
-    font-size: 2.75rem;
-    color: var(--primary-color);
-    letter-spacing: 0.15em;
     margin: 0;
     padding:20px;
   }
@@ -379,11 +375,86 @@
   }
 
  .hidden {
- display:none;
+ display:none ;
  }
-
  .flip-container {
-  perspective: 1000px;
+  perspective: 1500px;
+  width: 100%;
+  height: 100vh; /* or whatever height you want the cassette to take */
   position: relative;
+  overflow: hidden;
+}
+.flip-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 1.5s ease;
+}
+.flipped {
+  transform: rotateY(180deg);
+}
+.side {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+}
+.side-a {
+  transform: rotateY(0deg);
 }
 
+.side-b {
+  transform: rotateY(180deg);
+  overflow-y: auto; /* or scroll */
+
+}
+.artist-content {
+  display:flex;
+}
+
+.meet-the-artist {
+  padding:8px;
+  width:60%;
+}
+.meet-the-artist img {
+  width: 100%;
+  height: auto;
+  border-radius: 50px;
+  border: 2px solid var(--secondary-color);
+}
+h1 {
+  font-family: 'Righteous', sans-serif;
+  font-size: 2.75rem;
+  color: var(--primary-color);
+  letter-spacing: 0.15em;
+}
+h2 {
+  font-family: 'Righteous', sans-serif;
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+  letter-spacing: 0.15em;
+}
+.artist-about-text {
+  font-size: 1rem;
+  color: var(--secondary-color);
+  letter-spacing: 0.15em;
+}
+
+.cassette-side {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+  transition: transform 0.8s ease;
+}
+
+.content-wrapper {
+  max-width: 1200px;
+  margin: auto;
+  padding: 24px;
+}
