--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,40 +159,40 @@
   
   .image-track {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 calc(50vw - 150px);
-    box-sizing: content-box; 
-    margin:0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
   }
   
   .image-list {
     display: flex;
-    flex-wrap: nowrap;
-    gap: 36px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.5s ease-in-out;
-    width: max-content;
+  flex-wrap: nowrap;
+  gap: 36px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.5s ease-in-out;
+  width: max-content;
   }
   
   .image-slide {
     flex: 0 0 300px;
     transition: all 0.6s ease;
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  opacity: 0;
-  transform: scale(0.75);
-  pointer-events: none;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    transform: scale(0.75);
+    pointer-events: none;
+    padding:25px;
   }
 
   .image-slide.center {
@@ -235,7 +235,7 @@
     opacity: 0;
     transform:scale(0.75);
     pointer-events: none;
-   
+   position:absolute;
   }
   
   .custom-controls {
