--- a/stylesheet.css
+++ b/stylesheet.css
@@ -231,11 +231,7 @@
   }
 
   .image-slide:not(.center):not(.adjacent) {
-    visibility:hidden !important;
-    opacity: 0;
-    transform:scale(0.75);
-    pointer-events: none;
-   position:absolute;
+    display: none !important;
   }
   
   .custom-controls {
